test/functions/diten/whereClauseIgnored.good
whereClauseIgnored.chpl:8: error: unresolved call 'f(3)'
whereClauseIgnored.chpl:1: note: candidates are: f(x: int)
